[gd_scene load_steps=3 format=3 uid="uid://bk3ifesmxvwou"]

[ext_resource type="Script" uid="uid://csr72bv3tmrye" path="res://Scripts/carta_normal_base_prueba.gd" id="1_6rqu2"]
[ext_resource type="Texture2D" uid="uid://q2oro1lhk423" path="res://Images/test/baseball-card.png" id="2_kr8xf"]

[node name="Carta" type="Panel"]
custom_minimum_size = Vector2(100, 120)
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(50, 120)
script = ExtResource("1_6rqu2")

[node name="textura_carta" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -15.0
offset_right = 120.0
offset_bottom = 120.0
texture = ExtResource("2_kr8xf")
expand_mode = 3

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.185
anchor_top = 0.367
anchor_right = 0.185
anchor_bottom = 0.367
offset_left = -4.5
offset_top = -11.04
offset_right = 4.5
offset_bottom = 10.96
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "1"

[node name="nombre" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.27
anchor_top = 0.083
anchor_right = 0.27
anchor_bottom = 0.083
offset_left = -24.0
offset_top = -11.96
offset_right = 36.0
offset_bottom = 10.04
theme_override_colors/font_color = Color(0.776641, 0.449548, 0.0605862, 1)
theme_override_colors/font_shadow_color = Color(0.410155, 0.238639, 0.309087, 1)
theme_override_font_sizes/font_size = 15
text = "Nombre"

[node name="habilidad" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -11.0
offset_right = 25.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(0.917007, 0.273113, 0.350052, 1)
theme_override_font_sizes/font_size = 15
text = "Habilidad"

[node name="vida" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 18.0
offset_right = 96.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.962661, 0.138642, 0.432479, 1)
theme_override_colors/font_shadow_color = Color(0.408329, 0.408329, 0.408329, 1)
theme_override_font_sizes/font_size = 15
text = "100PS"
horizontal_alignment = 2

[node name="energia" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 92.0
offset_right = 17.0
offset_bottom = 127.0
theme_override_colors/font_color = Color(0, 0.653731, 0.22001, 1)
theme_override_colors/font_shadow_color = Color(0.0460029, 0.283837, 1, 1)
theme_override_font_sizes/font_size = 20
text = "4"

[node name="ataque" type="Label" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 97.0
offset_right = 73.0
offset_bottom = 121.0
theme_override_colors/font_color = Color(0.917007, 0.273113, 0.350052, 1)
theme_override_font_sizes/font_size = 17
text = "10"
horizontal_alignment = 2

[node name="defensa" type="Label" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 98.0
offset_right = 97.0
offset_bottom = 133.0
theme_override_colors/font_color = Color(0.917007, 0.273113, 0.350052, 1)
theme_override_font_sizes/font_size = 17
text = "10"
horizontal_alignment = 2

[node name="info" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_top = -1.358
anchor_right = 0.9
anchor_bottom = -1.358
offset_left = -155.0
offset_top = -129.04
offset_right = 155.0
offset_bottom = 128.96

[node name="NombreInfo" type="Label" parent="info"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.184
anchor_right = 0.5
anchor_bottom = 0.184
offset_left = -131.0
offset_top = -11.472
offset_right = 138.0
offset_bottom = 11.528
text = "Nombre"

[node name="VidaInfo" type="Label" parent="info"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.252
anchor_top = 0.331
anchor_right = 0.252
anchor_bottom = 0.331
offset_left = -52.12
offset_top = -11.398
offset_right = 51.88
offset_bottom = 11.602
text = "Vida: /"

[node name="CosteInfo" type="Label" parent="info"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.81
anchor_top = 0.324
anchor_right = 0.81
anchor_bottom = 0.324
offset_left = -52.1
offset_top = -11.592
offset_right = 51.9
offset_bottom = 11.408
text = "Coste: "

[node name="AtaqueInfo" type="Label" parent="info"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.242
anchor_top = 0.5
anchor_right = 0.242
anchor_bottom = 0.5
offset_left = -52.02
offset_top = -15.0
offset_right = 51.98
offset_bottom = 8.0
text = "Ataque: "

[node name="DefensaInfo" type="Label" parent="info"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.758
anchor_top = 0.483
anchor_right = 0.758
anchor_bottom = 0.483
offset_left = -51.98
offset_top = -11.614
offset_right = 52.02
offset_bottom = 11.386
text = "Defensa: "

[node name="HabilidadInfo" type="Label" parent="info"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.797
anchor_right = 0.5
anchor_bottom = 0.797
offset_left = -135.0
offset_top = -43.626
offset_right = 137.0
offset_bottom = 43.374
text = "Habilidad:"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
